# TradingAppFastAPI

./: .dockerignore  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose-dev.yaml  docker-compose-prod.yaml  environ.py  main.py  pyproject.toml  requirements.txt
app/: dependencies.py  main.py  schemas.py
app/auth/: auth.py  manager.py  schemas.py
app/database/: models.py  session.py
app/routers/: chat.py  operations.py  tasks.py
app/tasks/: tasks.py
auth/: manager.py
database/: models.py  session.py
docker/: celery.sh
frontend/pages/: router.py
frontend/templates/: base.html  chat.html  search.html
migrations/: env.py
migrations/versions/: abcc5d338fec_initial_revision.py  dddf532d1561_database_creation.py
models/: models.py
tests/: conftest.py  test_auth.py  test_operations.py
