[tool.poetry]
name = "trading-app"
version = "0.1.0"
description = ""
authors = ["onehandedpirate <plagueismkii@gmail.com>"]
readme = "README.md"
packages = [{include = "trading_app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.99.0"}
sqlalchemy = "^2.0.17"
alembic = "^1.11.1"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
