[tool.pytest.ini_options]
pythonpath = [
    ".", "app",
]

asyncio_mode = "auto"

[tool.poetry]
name = "trading-app"
version = "0.1.0"
description = ""
authors = ["onehandedpirate <plagueismkii@gmail.com>"]
readme = "README.md"
packages = [{include = "trading_app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.99.0"}
sqlalchemy = "^2.0.17"
alembic = "^1.11.1"
asyncpg = "^0.27.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.0.0"}
fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}
celery = "^5.3.1"
flower = "^2.0.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
gunicorn = "^20.1.0"
redis = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
